--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish GitHub Actions with Artifacts
 on:
   push:
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+.*"
+      - "v[0-9]+.[0-9]+.[0-9].*"
 
 jobs:
        
@@ -11,19 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: get repo
+      - name: Step 1 - get repo
         run: git clone 'https://github.com/undg/autorotate'
         
-      - name: step 2 - Add artifacts to publish to the temp folder
+      - name: Step 2 - build binary and add to artifacts
         run: |
           mkdir build
           cd autorotate
-          go build
-         
+          go build -o ../build
           cd ..
     
-      - name: Step 3 - Use the Upload Artifact GitHub Action
+      - name: Step 3 - Use the Artifact GitHub Action
         uses: actions/upload-artifact@v2
         with: 
           name: assets-for-download
-          path: downloads
+          path: build
