--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,9 @@ name: Publish GitHub Actions with Artifacts
 
 on:
   push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9].*"
+    branches: [master]
+    #tags:
+    #  - "v[0-9]+.[0-9]+.[0-9]+."
 
 jobs:
        
