--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
         
       - name: Step 2 - build binary and add to artifacts
         run: |
+          sudo apt-get install -y libxi-dev
           mkdir build
           cd autorotate
           go get -t ./...
