--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
           sudo apt-get install -y libxi-dev
           mkdir build
           go get -t ./...
-          go build -o build
+          go build -o build/autorotate
           cp -r _config build/
       - name: version
         run: echo "::set-output name=version::$(./build/autorotate version --short)"
@@ -42,15 +42,15 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build
+          asset_path: ./build/
           asset_name: autorotate.tar.gz
           asset_content_type: application/gzip
-      - name: upload zip artifact
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build
-          asset_name: autorotate.zip
-          asset_content_type: application/zip
+      # - name: upload zip artifact
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ github.token }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ./build/*
+      #     asset_name: autorotate.zip
+      #     asset_content_type: application/zip
