--- a/_config/systemd/user/rotate.service
+++ b/_config/systemd/user/rotate.service
@@ -2,4 +2,4 @@
 Description=Auto rotate screen in 2in1 laptop
 
 [Service]
-ExecStart=/home/undg/bin/autorotate auto --daemon --display eDP
+ExecStart=/home/undg/bin/autorotate --daemon --display eDP
