README.md added compilation command, fix typo #2

--- a/example.config
+++ b/example.config
@@ -1,4 +1,5 @@
 # vim: ft=toml
+# Work in progress, those values are not implemented in the app.
 
 [Display]
 # List of display names to enable rotations.
